[package]
name = "borrower-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
poise = "0.6.1"
reqwest = { version = "0.11.24", features = ["json"] }
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.38.0"
shuttle-secrets = "0.38.0"
shuttle-serenity = "0.38.0"
tokio = "1.26.0"
tracing = "0.1.37"
